--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="clear"></div>
                     </li>
                     <li>
-                        <span class="value">Date: 1 de Diciembre</span>
+                        <span class="value">Birthday: 1 de Diciembre</span>
                         <div class="clear"></div>
                     </li>
                     <li>
