enviando nuevos cambios y fotos a mi web

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <p class="copy">
 
-	   Design by <a href="https://www.facebook.com/marievletters" target="_blank"> Jane Prime </a>
+	   Design by <a href="https://www.facebook.com/marievletters" target="_blank"> Marie V </a>
 
 		  <span>
 
@@ -145,7 +145,7 @@
       bueno... es cuando entra segun lo minimalista claro eso dependera del FORMATO que quieras que tenga tu pagina a veces aplica y otras no
       eso depende, en mi caso aplica porque solo muestro mis fotos ;) bueno espero que las disfrutes mucho besitos.
 			</p>
-			<header>History</header>
+			<!-- <header>History</header>
 		    <p class="exp-title">
 			Mi primer pagina la hice ya hace algo de tiempo, inicialmente yo le manejaba a todos que era un BLOG pero nada que ver
       pues no era un BLOG era un pagina como muchas otras, solo que esta estaba hospedada en BLOGGER. De hecho al estar hospedada en blogger
@@ -155,7 +155,7 @@
       pude tener mi "BLOG" si lo quieres ver para que te des una idea de como era mi PRIMER SITIO haz click en el enlace de abajo.
       </p>
       <br/>
-      Click here -->	<a href="http://blog.melodytranny.com" target="_blank"> BLOG MELODY TRANNY </a>
+      Click here 	<a href="http://blog.melodytranny.com" target="_blank"> BLOG MELODY TRANNY </a> -->
 			<header>Pastime</header>
 			<p class="exp-title"> Como cualquier persona aprovecho mi tiempo viendo ropa, videos y escuchando musica</p>
 			<a href="https://www.youtube.com/user/melodypetit" target="_blank">
