changing welcome section from spanish to english

--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
         <div class="inner-noslit">
       <header>About this page</header>
 		    <p class="exp-title">
-			Esta pagina es muy sencilla y facil de usar o al menos asi lo veo yo, y es asi por que solo se muestran fotos, links y algunos textos,
-      esta idea me gusta ya que entre comillas le da un toque minimalista, minimalista es algo (o lo que sea) que solo muestra o usa
-      lo necesario y te recomienda no usar cosas que no vayas a necesitar. Hoy en dia hay cientos de herramientas y plugins
-      que hacen que tu pagina se vea super bien, pero nadie sabe que muchas de esas heramientas van a funcionar muy bien... siempre y cuando
-      tengas una buena computadora. He visto paginas que hacen esto sin importar si vas a navegar bien o no, tan solo por hacer que se VEA BONITA,
-      bueno... es cuando entra segun lo minimalista claro eso dependera del FORMATO que quieras que tenga tu pagina a veces aplica y otras no
-      eso depende, en mi caso aplica porque solo muestro mis fotos ;) bueno espero que las disfrutes mucho besitos.
+          Welcome to my site, i am very glad you are here, enjoying every place of my web, this site was designed by me, i am not an expertise
+    in terms of design but i think this place was made with great care and dedication. Nowadays every website you see is designed
+    under last tendences on frameworks and other technologies related on Web Design, i don't know if you know i am a software engineer and
+    as such one sometimes i have some problems when designing but i am working on to give you a better experience regarding something simple
+    and functional, maybe in this place you are not gonna watch something making you screaming wow great detail, just what you're gonna find is a simple,
+    beautiful and minimalistic place that's all, why i decided so? well there are so many reasons but one of them is because many explorers don't support
+    many frameworks so it's better to have one working on every explorer than one doesn't. So Welcome again and enjoy this place.
 			</p>
 			<!-- <header>History</header>
 		    <p class="exp-title">
@@ -157,7 +157,7 @@
       <br/>
       Click here 	<a href="http://blog.melodytranny.com" target="_blank"> BLOG MELODY TRANNY </a> -->
 			<header>Pastime</header>
-			<p class="exp-title"> Como cualquier persona aprovecho mi tiempo viendo ropa, videos y escuchando musica</p>
+			<p class="exp-title"> As any person i spend my time going shopping, watching videos or listening to music</p>
 			<a href="https://www.youtube.com/user/melodypetit" target="_blank">
             <div class="services pack-service2">
                 <div class="service2">
