changes to contact section

--- a/index.html
+++ b/index.html
@@ -481,9 +481,9 @@
     <p class="success">Your message has been sent successfully.</p>
     <p class="error">E-mail must be valid and message must be longer than 20 characters.</p>
 </form>-->
-<h1 style="font-size: 16px"> Correos <br/><br/>
+<h1 style="font-size: 16px"> E-mail <br/><br/>
     melody.appels@gmail.com<br/>
-    <br/><br/>Sitios personales <br/> <br/>
+    <br/><br/>Social Networks <br/> <br/>
 
 pinterest<br/>
 google+<br/>
