changes to card section

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="clear"></div>
                     </li>
                     <li>
-                        <span class="value">Birthday: 1 de Diciembre</span>
+                        <span class="value">Birthday: December 1st</span>
                         <div class="clear"></div>
                     </li>
                     <li>
@@ -112,7 +112,7 @@
                         <div class="clear"></div>
                     </li>
 					<li>
-                        <span class="value">City: Xalapa MX</span>
+                        <span class="value">Current City: Monterrey </span>
                         <div class="clear"></div>
                     </li>
 
