card section from english to spanish

--- a/index.html
+++ b/index.html
@@ -119,12 +119,15 @@
             </ul>
 
             <p class="about-desc" align="justify"><i class="fa fa-quote-left"></i>&nbsp;
-               Hola soy una chica travesti que vive en la ciudad de XALAPA, soy tranquila, sencilla y sin vicios,
-			   me gusta lo mismo que cualquier persona, la musica, cine, leer, cocinar y de vez en cuando hacer un poco de ejercicio.
-			   Bienvenido a mi sitio! esta es una pagina hecha por mi, es una pagina sencilla y practica espero la disfrutes! &nbsp;&nbsp;<i class="fa fa-quote-right"></i>
+              Hi everyone, i am a tranny girl from Xalapa MX, how am i?
+              well I am quite simple, very easygoing and overall very humble
+              i am as any other person so you probably will be matching with me.
+              I like reading, watching, listening and sometimes a little work out.
+              Please reach me for anything, i will be very glad to text you back or maybe
+              whatsapping &nbsp;&nbsp;<i class="fa fa-quote-right"></i>
             </p>
 			<br/>
-            <h1 style="font-size:14px; text-align: right;">Jane Prime  </h1>
+            <h1 style="font-size:14px; text-align: right;">Jane V  </h1>
 
         </div>
     </div>
