card section from english to spanish anothers one

--- a/index.html
+++ b/index.html
@@ -120,14 +120,14 @@
 
             <p class="about-desc" align="justify"><i class="fa fa-quote-left"></i>&nbsp;
               Hi everyone, i am a tranny girl from Xalapa MX, how am i?
-              well I am quite simple, very easygoing and overall very humble
+              Well I am quite simple, very easy-going and overall very humble,
               i am as any other person so you probably will be matching with me.
               I like reading, watching, listening and sometimes a little work out.
               Please reach me for anything, i will be very glad to text you back or maybe
               whatsapping &nbsp;&nbsp;<i class="fa fa-quote-right"></i>
             </p>
 			<br/>
-            <h1 style="font-size:14px; text-align: right;">Jane V  </h1>
+            <h1 style="font-size:14px; text-align: right;">Jane Vega  </h1>
 
         </div>
     </div>
