--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
               Well I am quite simple, very easy-going and overall very humble,
               i am as any other person so you probably will be matching with me.
               I like reading, watching, listening and sometimes a little work out.
-              Please reach me for anything, i will be very glad to text you back or maybe
+              Please reach me, i will be very glad to text you back or maybe
               whatsapping &nbsp;&nbsp;<i class="fa fa-quote-right"></i>
             </p>
 			<br/>
