changing the title of the page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" class="no-js">
 <head>
 <meta charset="UTF-8" />
-<title>Melody Janele Travesti Xalapa Shemale Xalapa Veracruz Mexico</title>
+<title>Marie V Tranny Monterrey Mexico </title>
 <meta name="description" content="Pagina personal de melody travesti xalapa"/>
 <meta name="author" content="Jane Minnie">
 <meta name="robots" content="index,follow" />
