--- a/index.html
+++ b/index.html
@@ -489,13 +489,17 @@
     melody.appels@gmail.com<br/>
     <br/><br/>Social Networks <br/> <br/>
 
-pinterest<br/>
+github<br/>
+instagram<br/>
 google+<br/>
-facebook<br/>
+facebook and so on<br/>
+
 </h1>
           <ul class="socials">
-                <li class="icon-behance behance"><a href="https://www.instagram.com/melodytranny/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                <li class="icon-behance behance"><a href="https://github.com/melodybeat" target="_blank"><i class="fa fa-github"></i></a></li>
+                <li class="icon-behance behance"><a href="https://twitter.com/MarieV097" target="_blank"><i class="fa fa-twitter"></i></a></li>
                 <li class="icon-behance behance"><a href="https://www.pinterest.com/melodytranny/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
+                <li class="icon-behance behance"><a href="https://www.instagram.com/melodytranny/" target="_blank"><i class="fa fa-instagram"></i></a></li>
                 <li class="icon-twitter twitter"><a href="https://plus.google.com/u/0/+MelodyJaneleVega/posts" target="_blank"><i class="fa fa-google-plus"></i></a></li>
                 <li class="icon-pinterest google"><a href="https://www.facebook.com/marievletters" target="_blank"><i class="fa fa-facebook"></i></a></li>
             </ul>
