--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1>Melody Janele Vega</h1>
     <span>Juteuse, Ange &amp; Tranny</span>
     <nav id="cbp-fbscroller1" class="cbp-fbscroller">
-    <a href="#fbsection1" class="cbp-fbcurrent">Inicio</a>
+    <a href="#fbsection1" class="cbp-fbcurrent">Start</a>
     <a href="#fbsection2">Marie V</a>
     <a class="experience" href="#fbsection3">Bienvenue</a>
     <a href="#fbsection4">Off Claire</a>
