changed marie v to marie vega

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <p class="copy">
 
-	   Design by <a href="https://www.facebook.com/marievletters" target="_blank"> Marie V </a>
+	   Design by <a href="https://www.facebook.com/marievletters" target="_blank"> Marie Vega </a>
 
 		  <span>
 
