--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en" class="no-js">
 <head>
 <meta charset="UTF-8" />
-<title>Marie V Tranny Monterrey Mexico </title>
-<meta name="description" content="Pagina personal de melody travesti xalapa"/>
-<meta name="author" content="Jane Minnie">
+<title>Marie V Tranny Le beau Corps </title>
+<meta name="description" content="Pagina personal de Marie V Travesti Xalapa"/>
+<meta name="author" content="Marie Vega">
 <meta name="robots" content="index,follow" />
-<meta name="description" content="melody janele travesti xalapa veracruz mexico"/>
-<meta name="keywords" content="melody janele travesti xalapa veracruz mexico"/>
+<meta name="description" content="Marie V Travesti Xalapa Veracruz mexico"/>
+<meta name="keywords" content="Marie V Travesti Xalapa Veracruz mexico"/>
 <meta name="p:domain_verify" content="cfaa9978ed8e54324dc125b0b3ce7a97"/>
 <meta name="google-site-verification" content="vYBtk9uwWh83dTMSTMlP5YeuDoKHzEl6PieSLnI1Oxs" />
 
