--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="menu collapse">
     <h2>COLLODION LOGO</h2>
     <h1>Melody Janele Vega</h1>
-    <span>Juteuse, Ange &amp; Tranny</span>
+    <span>Petite Fille, Angel &amp; Tranny</span>
     <nav id="cbp-fbscroller1" class="cbp-fbscroller">
     <a href="#fbsection1" class="cbp-fbcurrent">Home</a>
     <a href="#fbsection2">Marie V</a>
