--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <div class="clear"></div>
                     </li>
 					<li>
-                        <span class="value">Current City: Monterrey </span>
+                        <span class="value">Current City: Xalapa </span>
                         <div class="clear"></div>
                     </li>
 
@@ -463,10 +463,14 @@
     <div class="block">
         <div class="inner-noslit">
             <header>My Position</header>
-			      <p class="exp-title"> As you probably read, i am from XALAPA MX which is very nice and so quit city, this is my birthplace but because of my work i am
+			      <p class="exp-title">
+            <!--
+              As you probably read, i am from XALAPA MX which is very nice and so quit city, this is my birthplace but because of my work i am
               currently living in MONTERREY NL, so if you are in such place we can stay in contact, my location is here!  </p>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5546.67082865568!2d-100.29248715729487!3d25.652357890436853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1505572792658" width="1000" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
-            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3760.186535152566!2d-96.93220263848764!3d19.533603595378544!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2smx!4v1424487853294" width="1000" height="380" frameborder="0" style="border:0"></iframe> -->
+             MTY <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d5546.67082865568!2d-100.29248715729487!3d25.652357890436853!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1505572792658" width="1000" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
+            -->
+            I'm currently now in XALAPA, i hope for a long time so if you are here get in touch to me... we are really gonna be good mates, look for me near this zone
+            <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3760.186535152566!2d-96.93220263848764!3d19.533603595378544!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses!2smx!4v1424487853294" width="1000" height="380" frameborder="0" style="border:0"></iframe>
         </div>
     </div>
 </section>
