--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="p:domain_verify" content="cfaa9978ed8e54324dc125b0b3ce7a97"/>
 <meta name="google-site-verification" content="vYBtk9uwWh83dTMSTMlP5YeuDoKHzEl6PieSLnI1Oxs" />
 
-<link rel="icon" type="image/png" href="/img/favicon.png"/>
+<link rel="icon" href="favicon.ico" sizes="16x16"/> 
 <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'/>
 <link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800' rel='stylesheet' type='text/css'/>
 <link href="fonts/font-awesome-4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
@@ -45,9 +45,9 @@
 <div class="menu collapse">
     <h2>COLLODION LOGO</h2>
     <h1>Melody Janele Vega</h1>
-    <span>Noir &amp; Blonde Tranny</span>
+    <span>Noir &amp; Blonde Tranny Girl</span>
     <nav id="cbp-fbscroller1" class="cbp-fbscroller">
-    <a href="#fbsection1" class="cbp-fbcurrent">Home</a>
+    <a href="#fbsection1" class="cbp-fbcurrent">Premiere</a>
     <a href="#fbsection2">Marie V</a>
     <a class="experience" href="#fbsection3">Bienvenue</a>
     <a href="#fbsection4">Off Claire</a>
