--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="p:domain_verify" content="cfaa9978ed8e54324dc125b0b3ce7a97"/>
 <meta name="google-site-verification" content="vYBtk9uwWh83dTMSTMlP5YeuDoKHzEl6PieSLnI1Oxs" />
 
-<link rel="icon" type="image/x-icon" href="/favicon.ico" />
+<link rel="icon" type="image/x-icon" href="/img/favicon.ico" />
 <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'/>
 <link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800' rel='stylesheet' type='text/css'/>
 <link href="fonts/font-awesome-4.0.3/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
