--- a/index.html
+++ b/index.html
@@ -489,22 +489,25 @@
     <p class="error">E-mail must be valid and message must be longer than 20 characters.</p>
 </form>-->
 <h1 style="font-size: 16px"> E-mail <br/><br/>
-    melody.appels@gmail.com<br/>
-    <br/><br/>Social Networks <br/> <br/>
+    melody.appels@gmail.com<br/><br/><br/>
+    Whatsapp Link <br/><br/>
+    <a href="https://bit.ly/2XbNSCE" target="_blank">bit.ly/2XbNSCE</a>
+    <br/><br/><br/>Social Networks <br/> <br/>
 
-github<br/>
+facebook<br/>
 instagram<br/>
-google+<br/>
-facebook and so on<br/>
+pinterest and so on<br/>
 
 </h1>
           <ul class="socials">
+                <li class="icon-pinterest google"><a href="https://www.facebook.com/leblondemarie" target="_blank"><i class="fa fa-facebook"></i></a></li>
                 <li class="icon-behance behance"><a href="https://github.com/melodybeat" target="_blank"><i class="fa fa-github"></i></a></li>
                 <li class="icon-behance behance"><a href="https://twitter.com/MarieV097" target="_blank"><i class="fa fa-twitter"></i></a></li>
                 <li class="icon-behance behance"><a href="https://www.pinterest.com/melodytranny/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
                 <li class="icon-behance behance"><a href="https://www.instagram.com/melodytranny/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                <li class="icon-twitter twitter"><a href="https://plus.google.com/u/0/+MelodyJaneleVega/posts" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                <li class="icon-pinterest google"><a href="https://www.facebook.com/leblondemarie" target="_blank"><i class="fa fa-facebook"></i></a></li>
+              <!--   <li class="icon-twitter twitter"><a href="https://plus.google.com/u/0/+MelodyJaneleVega/posts" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+-->
+
             </ul>
 </div>
 </div>
