--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en" class="no-js">
 <head>
 <meta charset="UTF-8" />
-<title>Marie V. Tranny Girl - Blonde Sweetie Pops  </title>
+<title>Marie Vega Tranny Girl - Blonde Sweetie Pops  </title>
 <meta name="description" content="Pagina personal de Marie Vega Tranny Girl Xalapa"/>
 <meta name="author" content="Melody Janele Vega">
 <meta name="robots" content="index,follow" />
