Updating links to social networks

--- a/index.html
+++ b/index.html
@@ -500,11 +500,11 @@ pinterest and so on<br/>
 
 </h1>
           <ul class="socials">
-                <li class="icon-pinterest google"><a href="https://www.facebook.com/leblondemarie" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li class="icon-pinterest google"><a href="https://www.facebook.com/janellesweetpops" target="_blank"><i class="fa fa-facebook"></i></a></li>
                 <li class="icon-behance behance"><a href="https://github.com/melodybeat" target="_blank"><i class="fa fa-github"></i></a></li>
-                <li class="icon-behance behance"><a href="https://twitter.com/MarieV097" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                <li class="icon-behance behance"><a href="https://twitter.com/melodysweetpops" target="_blank"><i class="fa fa-twitter"></i></a></li>
                 <li class="icon-behance behance"><a href="https://www.pinterest.com/melodytranny/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
-                <li class="icon-behance behance"><a href="https://www.instagram.com/melodytranny/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                <li class="icon-behance behance"><a href="https://www.instagram.com/melodysweetjems" target="_blank"><i class="fa fa-instagram"></i></a></li>
               <!--   <li class="icon-twitter twitter"><a href="https://plus.google.com/u/0/+MelodyJaneleVega/posts" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
 -->
 
